--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -260,7 +260,7 @@
         <tech.nextcash.nextcashwallet.TextButton
             android:id="@+id/specifyReceiveAmount"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             style="@style/Button"
             android:text="@string/specify_amount"/>
@@ -268,7 +268,7 @@
         <tech.nextcash.nextcashwallet.TextButton
             android:id="@+id/specifyReceiveLabel"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             style="@style/Button"
             android:text="@string/specify_label"/>
@@ -276,7 +276,7 @@
         <tech.nextcash.nextcashwallet.TextButton
             android:id="@+id/specifyReceiveMessage"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             style="@style/Button"
             android:text="@string/specify_message"/>
