--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="colorNegative">#fc66</color>
     <color name="rowShade">#feee</color>
     <color name="rowNotShade">#0000</color>
-    <color name="warningBackground">#6ee1</color>
+    <color name="warningBackground">#fff6</color>
     <color name="warningText">#fc66</color>
     <color name="messageBackground">#ffff</color>
     <color name="messageText">#f000</color>
