--- a/app/src/main/res/layout/scan.xml
+++ b/app/src/main/res/layout/scan.xml
@@ -53,26 +53,54 @@
         android:translationZ="1dp"
         android:contentDescription="@string/scan"/>
 
-    <tech.nextcash.nextcashwallet.ImageButton
+    <LinearLayout
         android:id="@+id/enterPaymentCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/camera"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/openAddressBook"
-        android:layout_width="@dimen/image_button_size"
-        android:layout_height="@dimen/image_button_size"
-        style="@style/SmallButton"
-        android:src="@drawable/ic_cursor_white_36dp"
-        android:contentDescription="@string/enter_payment_code"/>
+        app:layout_constraintStart_toStartOf="parent">
 
-    <tech.nextcash.nextcashwallet.ImageButton
+        <tech.nextcash.nextcashwallet.ImageButton
+            style="@style/SmallButton"
+            android:layout_width="@dimen/image_button_size"
+            android:layout_height="@dimen/image_button_size"
+            android:src="@drawable/ic_cursor_white_36dp"
+            android:contentDescription="@string/enter_payment_code"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/SmallHeadingText"
+            android:text="@string/enter"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/openAddressBook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/camera"
         app:layout_constraintStart_toEndOf="@id/enterPaymentCode"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="@dimen/image_button_size"
-        android:layout_height="@dimen/image_button_size"
-        style="@style/SmallButton"
-        android:src="@drawable/baseline_list_white_36dp"
-        android:contentDescription="@string/address_book"/>
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <tech.nextcash.nextcashwallet.ImageButton
+            style="@style/SmallButton"
+            android:layout_width="@dimen/image_button_size"
+            android:layout_height="@dimen/image_button_size"
+            android:src="@drawable/baseline_people_white_36dp"
+            android:contentDescription="@string/address_book"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/SmallHeadingText"
+            android:text="@string/contacts"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
